--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <div class="profile-meta">
                             <p><i class="fas fa-map-marker-alt"></i> Россия, Сыктывкар</p>
                             <p><i class="fas fa-laptop-house"></i> Готов к удаленной работе</p>
-                            <p><i class="fas fa-briefcase"></i> Опыт: 4+ лет</p>
+                            <p><i class="fas fa-briefcase"></i> Опыт: 5 лет</p>
                             <p><i class="fas fa-dollar-sign"></i> Ожидания: от 350 000 ₽</p>
                         </div>
                         <div class="profile-social">
@@ -69,7 +69,7 @@
                     <div class="about-card">
                         <h2 class="section-title"><i class="fas fa-user-tie"></i> О себе</h2>
                         <div class="divider"></div>
-                        <p>Опытный Java-разработчик с более чем 4-летним стажем, специализирующийся на создании высоконагруженных и отказоустойчивых систем.</p>
+                        <p>Опытный Java-разработчик с более чем 5-летним стажем, специализирующийся на создании высоконагруженных и отказоустойчивых систем.</p>
                         <p>Обладаю глубокими знаниями в области микросервисной архитектуры, облачных технологий и распределенных систем.</p>
                         <p>Постоянно совершенствую свои навыки, слежу за новыми технологиями и лучшими практиками в разработке.</p>
                     </div>
@@ -130,7 +130,7 @@
                                 <div class="timeline-date">Май 2024 — настоящее время</div>
                                 <div class="timeline-content">
                                     <h3>Senior Java Developer</h3>
-                                    <h4>Талпабокс, Румыния (удаленно)</h4>
+                                    <h4>TALPA BOX S.R.L., Румыния (удаленно)</h4>
                                     <div class="experience-section">
                                         <div class="experience-item">
                                             <div class="experience-header">
@@ -197,7 +197,7 @@
                                 <div class="timeline-date">Январь 2021 — Сентябрь 2024</div>
                                 <div class="timeline-content">
                                     <h3>Middle Java Developer</h3>
-                                    <h4>Талпабокс, Румыния (удаленно)</h4>
+                                    <h4>TALPA BOX S.R.L., Румыния (удаленно)</h4>
                                     <div class="experience-section">
                                         <div class="experience-item">
                                             <div class="experience-header">
