rewrite company names

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                                 <div class="timeline-date">Май 2024 — настоящее время</div>
                                 <div class="timeline-content">
                                     <h3>Senior Java Developer</h3>
-                                    <h4>TALPA BOX S.R.L., Румыния (удаленно)</h4>
+                                    <h4>TALPA BOX S.R.L.</h4>
                                     <div class="experience-section">
                                         <div class="experience-item">
                                             <div class="experience-header">
@@ -197,7 +197,7 @@
                                 <div class="timeline-date">Январь 2021 — Сентябрь 2024</div>
                                 <div class="timeline-content">
                                     <h3>Middle Java Developer</h3>
-                                    <h4>TALPA BOX S.R.L., Румыния (удаленно)</h4>
+                                    <h4>TALPA BOX S.R.L.</h4>
                                     <div class="experience-section">
                                         <div class="experience-item">
                                             <div class="experience-header">
