--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div class="timeline-date">Май 2024 — настоящее время</div>
                         <div class="timeline-content">
                             <h3>Senior Java Developer</h3>
-                            <h4>TALPA BOX S.R.L., Румыния (удаленно)</h4>
+                            <h4>TALPA BOX S.R.L.</h4>
                             <div class="project-tech">
                                 <span>Java</span>
                                 <span>Spring Boot</span>
@@ -179,7 +179,7 @@
                         <div class="timeline-date">Январь 2021 — Сентябрь 2024</div>
                         <div class="timeline-content">
                             <h3>Middle Java Developer</h3>
-                            <h4>TALPA BOX S.R.L., Румыния (удаленно)</h4>
+                            <h4>TALPA BOX S.R.L.</h4>
                             <div class="project-tech">
                                 <span>Java</span>
                                 <span>Spring Framework</span>
